manifests/dev/navidrome/Namespace-navidrome.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: navidrome
