manifests/dev/navidrome/Service-navidrome.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ports:
    - name: http
      port: 4533
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/name: navidrome
  type: ClusterIP
