manifests/dev/navidrome/Ingress-navidrome.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: navidrome
  namespace: navidrome
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: navidrome
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - navidrome.home.kronkltd.net
      secretName: navidrome-tls
